// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Visual Regression Tests - Customization Components Animation State Visual Tests captures expansion animation: section-expansion-animation 1`] = `
{
  "collapsed": "<div class="border rounded-xl overflow-hidden shadow-sm transition-all duration-300 border-gray-200 hover:border-gray-300 hover:shadow-sm " data-testid="visual-section-animation-test"><div class="w-full px-4 sm:px-6 py-4 sm:py-5 bg-white transition-all duration-200 hover:bg-gray-50"><div class="flex items-center justify-between"><div class="flex items-center space-x-3 sm:space-x-4 flex-1 min-w-0"><div class="relative p-2 sm:p-2.5 rounded-xl transition-all duration-200 bg-blue-50 border-blue-200 text-blue-800 "><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon" class="h-5 w-5 sm:h-6 sm:w-6 transition-transform duration-200"><path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z"></path></svg></div><div class="flex-1 min-w-0"><div class="flex items-center space-x-2 flex-wrap"><h3 class="text-base sm:text-lg font-semibold text-gray-900 truncate">Animation Test</h3></div><p class="text-sm text-gray-600 mt-1 line-clamp-2 sm:line-clamp-1">Testing expansion animation</p></div></div></div></div></div>",
  "expanded": "<div class="border rounded-xl overflow-hidden shadow-sm transition-all duration-300 border-blue-300 shadow-md " data-testid="visual-section-animation-test"><div class="w-full px-4 sm:px-6 py-4 sm:py-5 bg-white transition-all duration-200 hover:bg-blue-100"><div class="flex items-center justify-between"><div class="flex items-center space-x-3 sm:space-x-4 flex-1 min-w-0"><div class="relative p-2 sm:p-2.5 rounded-xl transition-all duration-200 bg-blue-50 border-blue-200 text-blue-800 scale-110"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon" class="h-5 w-5 sm:h-6 sm:w-6 transition-transform duration-200"><path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z"></path></svg></div><div class="flex-1 min-w-0"><div class="flex items-center space-x-2 flex-wrap"><h3 class="text-base sm:text-lg font-semibold text-gray-900 truncate">Animation Test</h3></div><p class="text-sm text-gray-600 mt-1 line-clamp-2 sm:line-clamp-1">Testing expansion animation</p></div></div></div></div><div class="border-t border-gray-200 bg-gradient-to-br from-gray-50 to-white p-4 sm:p-6"><div class="p-4"><p>Animated content</p></div></div></div>",
}
`;

exports[`Visual Regression Tests - Customization Components Animation State Visual Tests captures loading animation states: loading-animation-states 1`] = `
<div>
  <div
    class="space-y-6"
  >
    <div
      class="animate-pulse bg-gray-200 h-8 w-1/3 rounded"
    />
    <div
      class="animate-pulse bg-gray-200 h-5 w-2/3 rounded"
    />
    <div
      class="space-y-4"
    >
      <div
        class="animate-pulse bg-white border border-gray-200 rounded-xl p-6"
      >
        <div
          class="flex items-center space-x-4"
        >
          <div
            class="w-12 h-12 bg-gray-200 rounded-xl"
          />
          <div
            class="flex-1"
          >
            <div
              class="h-5 bg-gray-200 rounded w-1/4 mb-2"
            />
            <div
              class="h-4 bg-gray-200 rounded w-1/2"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests - Customization Components Complex Layout Visual Tests renders complex form layouts correctly: complex-form-layout 1`] = `
<div
  class="border rounded-xl overflow-hidden shadow-sm transition-all duration-300 border-purple-300 shadow-md "
  data-testid="visual-section-complex-form"
>
  <div
    class="w-full px-4 sm:px-6 py-4 sm:py-5 bg-white transition-all duration-200 hover:bg-purple-100"
  >
    <div
      class="flex items-center justify-between"
    >
      <div
        class="flex items-center space-x-3 sm:space-x-4 flex-1 min-w-0"
      >
        <div
          class="relative p-2 sm:p-2.5 rounded-xl transition-all duration-200 bg-purple-50 border-purple-200 text-purple-800 scale-110"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5 sm:h-6 sm:w-6 transition-transform duration-200"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.5 21v-7.5a.75.75 0 0 1 .75-.75h3a.75.75 0 0 1 .75.75V21m-4.5 0H2.36m11.14 0H18m0 0h3.64m-1.39 0V9.349M3.75 21V9.349m0 0a3.001 3.001 0 0 0 3.75-.615A2.993 2.993 0 0 0 9.75 9.75c.896 0 1.7-.393 2.25-1.016a2.993 2.993 0 0 0 2.25 1.016c.896 0 1.7-.393 2.25-1.015a3.001 3.001 0 0 0 3.75.614m-16.5 0a3.004 3.004 0 0 1-.621-4.72l1.189-1.19A1.5 1.5 0 0 1 5.378 3h13.243a1.5 1.5 0 0 1 1.06.44l1.19 1.189a3 3 0 0 1-.621 4.72M6.75 18h3.75a.75.75 0 0 0 .75-.75V13.5a.75.75 0 0 0-.75-.75H6.75a.75.75 0 0 0-.75.75v3.75c0 .414.336.75.75.75Z"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center space-x-2 flex-wrap"
          >
            <h3
              class="text-base sm:text-lg font-semibold text-gray-900 truncate"
            >
              Complex Form
            </h3>
            <span
              class="inline-flex items-center px-2 py-1 text-xs font-medium bg-gradient-to-r from-blue-100 to-blue-200 text-blue-800 rounded-full whitespace-nowrap"
            >
              Advanced
            </span>
          </div>
          <p
            class="text-sm text-gray-600 mt-1 line-clamp-2 sm:line-clamp-1"
          >
            Testing complex form layouts
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="border-t border-gray-200 bg-gradient-to-br from-gray-50 to-white p-4 sm:p-6"
  >
    <div
      class="space-y-6"
    >
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-6"
      >
        <div
          class="space-y-4"
        >
          <div>
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Business Name
            </label>
            <input
              class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
              placeholder="Enter business name"
              type="text"
            />
          </div>
          <div>
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Description
            </label>
            <textarea
              class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
              placeholder="Describe your business"
              rows="4"
            />
          </div>
        </div>
        <div
          class="space-y-4"
        >
          <div>
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Theme
            </label>
            <select
              class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
            >
              <option>
                Modern
              </option>
              <option>
                Classic
              </option>
              <option>
                Minimalist
              </option>
            </select>
          </div>
          <div>
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Primary Color
            </label>
            <div
              class="flex space-x-2"
            >
              <input
                class="w-12 h-10 border border-gray-300 rounded cursor-pointer"
                type="color"
                value="#3B82F6"
              />
              <input
                class="flex-1 px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
                type="text"
                value="#3B82F6"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="border-t pt-6"
      >
        <h4
          class="text-lg font-medium text-gray-900 mb-4"
        >
          Preview
        </h4>
        <div
          class="bg-gray-100 rounded-lg p-6"
        >
          <div
            class="bg-white rounded-lg shadow p-4"
          >
            <h5
              class="text-xl font-bold"
              style="color: rgb(59, 130, 246);"
            >
              Your Business Name
            </h5>
            <p
              class="text-gray-600 mt-2"
            >
              Your business description will appear here...
            </p>
          </div>
        </div>
      </div>
      <div
        class="flex justify-end space-x-3"
      >
        <button
          class="px-4 py-2 border border-gray-300 rounded-md text-gray-700 hover:bg-gray-50"
        >
          Cancel
        </button>
        <button
          class="px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700"
        >
          Save Changes
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests - Customization Components Complex Layout Visual Tests renders dashboard-style layouts correctly: dashboard-style-layout 1`] = `
<div>
  <div
    class="space-y-6"
  >
    <div
      class="bg-gradient-to-r from-blue-500 to-purple-600 rounded-xl p-6 text-white"
    >
      <h2
        class="text-2xl font-bold mb-2"
      >
        Setup Progress
      </h2>
      <p
        class="text-blue-100 mb-4"
      >
        Complete your customization to unlock all features
      </p>
      <div
        class="bg-white/20 rounded-full h-2"
      >
        <div
          class="bg-white rounded-full h-2"
          style="width: 75%;"
        />
      </div>
      <p
        class="text-sm text-blue-100 mt-2"
      >
        75% Complete
      </p>
    </div>
    <div
      class="grid grid-cols-1 md:grid-cols-3 gap-6"
    >
      <div
        class="bg-white border border-gray-200 rounded-xl p-6"
      >
        <div
          class="flex items-center space-x-3"
        >
          <div
            class="p-2 bg-blue-100 rounded-lg"
          >
            <svg
              aria-hidden="true"
              class="h-6 w-6 text-blue-600"
              data-slot="icon"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div>
            <h3
              class="font-semibold text-gray-900"
            >
              Profile
            </h3>
            <p
              class="text-sm text-gray-600"
            >
              Complete
            </p>
          </div>
        </div>
      </div>
      <div
        class="bg-white border border-orange-200 rounded-xl p-6 ring-2 ring-orange-200"
      >
        <div
          class="flex items-center space-x-3"
        >
          <div
            class="p-2 bg-purple-100 rounded-lg"
          >
            <svg
              aria-hidden="true"
              class="h-6 w-6 text-purple-600"
              data-slot="icon"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.5 21v-7.5a.75.75 0 0 1 .75-.75h3a.75.75 0 0 1 .75.75V21m-4.5 0H2.36m11.14 0H18m0 0h3.64m-1.39 0V9.349M3.75 21V9.349m0 0a3.001 3.001 0 0 0 3.75-.615A2.993 2.993 0 0 0 9.75 9.75c.896 0 1.7-.393 2.25-1.016a2.993 2.993 0 0 0 2.25 1.016c.896 0 1.7-.393 2.25-1.015a3.001 3.001 0 0 0 3.75.614m-16.5 0a3.004 3.004 0 0 1-.621-4.72l1.189-1.19A1.5 1.5 0 0 1 5.378 3h13.243a1.5 1.5 0 0 1 1.06.44l1.19 1.189a3 3 0 0 1-.621 4.72M6.75 18h3.75a.75.75 0 0 0 .75-.75V13.5a.75.75 0 0 0-.75-.75H6.75a.75.75 0 0 0-.75.75v3.75c0 .414.336.75.75.75Z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div>
            <h3
              class="font-semibold text-gray-900"
            >
              Website
            </h3>
            <p
              class="text-sm text-orange-600"
            >
              In Progress
            </p>
          </div>
        </div>
      </div>
      <div
        class="bg-white border border-gray-200 rounded-xl p-6 opacity-50"
      >
        <div
          class="flex items-center space-x-3"
        >
          <div
            class="p-2 bg-gray-100 rounded-lg"
          >
            <svg
              aria-hidden="true"
              class="h-6 w-6 text-gray-400"
              data-slot="icon"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 21a9.004 9.004 0 0 0 8.716-6.747M12 21a9.004 9.004 0 0 1-8.716-6.747M12 21c2.485 0 4.5-4.03 4.5-9S14.485 3 12 3m0 18c-2.485 0-4.5-4.03-4.5-9S9.515 3 12 3m0 0a8.997 8.997 0 0 1 7.843 4.582M12 3a8.997 8.997 0 0 0-7.843 4.582m15.686 0A11.953 11.953 0 0 1 12 10.5c-2.998 0-5.74-1.1-7.843-2.918m15.686 0A8.959 8.959 0 0 1 21 12c0 .778-.099 1.533-.284 2.253m0 0A17.919 17.919 0 0 1 12 16.5c-3.162 0-6.133-.815-8.716-2.247m0 0A9.015 9.015 0 0 1 3 12c0-1.605.42-3.113 1.157-4.418"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div>
            <h3
              class="font-semibold text-gray-900"
            >
              Enterprise
            </h3>
            <p
              class="text-sm text-gray-600"
            >
              Pending
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests - Customization Components CustomizationSection Visual States renders all color variants correctly: section-all-colors 1`] = `
{
  "blue": "<div class="border rounded-xl overflow-hidden shadow-sm transition-all duration-300 border-blue-300 shadow-md " data-testid="visual-section-blue-section"><div class="w-full px-4 sm:px-6 py-4 sm:py-5 bg-white transition-all duration-200 hover:bg-blue-100"><div class="flex items-center justify-between"><div class="flex items-center space-x-3 sm:space-x-4 flex-1 min-w-0"><div class="relative p-2 sm:p-2.5 rounded-xl transition-all duration-200 bg-blue-50 border-blue-200 text-blue-800 scale-110"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon" class="h-5 w-5 sm:h-6 sm:w-6 transition-transform duration-200"><path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z"></path></svg></div><div class="flex-1 min-w-0"><div class="flex items-center space-x-2 flex-wrap"><h3 class="text-base sm:text-lg font-semibold text-gray-900 truncate">Blue Section</h3><span class="inline-flex items-center px-2 py-1 text-xs font-medium bg-gradient-to-r from-blue-100 to-blue-200 text-blue-800 rounded-full whitespace-nowrap">Test</span></div><p class="text-sm text-gray-600 mt-1 line-clamp-2 sm:line-clamp-1">A blue colored section</p></div></div></div></div><div class="border-t border-gray-200 bg-gradient-to-br from-gray-50 to-white p-4 sm:p-6"><div class="p-4"><p>Content for blue section</p></div></div></div>",
  "gold": "<div class="border rounded-xl overflow-hidden shadow-sm transition-all duration-300 border-yellow-300 shadow-md " data-testid="visual-section-gold-section"><div class="w-full px-4 sm:px-6 py-4 sm:py-5 bg-white transition-all duration-200 hover:bg-yellow-100"><div class="flex items-center justify-between"><div class="flex items-center space-x-3 sm:space-x-4 flex-1 min-w-0"><div class="relative p-2 sm:p-2.5 rounded-xl transition-all duration-200 bg-yellow-50 border-yellow-200 text-yellow-800 scale-110"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon" class="h-5 w-5 sm:h-6 sm:w-6 transition-transform duration-200"><path stroke-linecap="round" stroke-linejoin="round" d="M12 21a9.004 9.004 0 0 0 8.716-6.747M12 21a9.004 9.004 0 0 1-8.716-6.747M12 21c2.485 0 4.5-4.03 4.5-9S14.485 3 12 3m0 18c-2.485 0-4.5-4.03-4.5-9S9.515 3 12 3m0 0a8.997 8.997 0 0 1 7.843 4.582M12 3a8.997 8.997 0 0 0-7.843 4.582m15.686 0A11.953 11.953 0 0 1 12 10.5c-2.998 0-5.74-1.1-7.843-2.918m15.686 0A8.959 8.959 0 0 1 21 12c0 .778-.099 1.533-.284 2.253m0 0A17.919 17.919 0 0 1 12 16.5c-3.162 0-6.133-.815-8.716-2.247m0 0A9.015 9.015 0 0 1 3 12c0-1.605.42-3.113 1.157-4.418"></path></svg></div><div class="flex-1 min-w-0"><div class="flex items-center space-x-2 flex-wrap"><h3 class="text-base sm:text-lg font-semibold text-gray-900 truncate">Gold Section</h3><span class="inline-flex items-center px-2 py-1 text-xs font-medium bg-gradient-to-r from-blue-100 to-blue-200 text-blue-800 rounded-full whitespace-nowrap">Test</span></div><p class="text-sm text-gray-600 mt-1 line-clamp-2 sm:line-clamp-1">A gold colored section</p></div></div></div></div><div class="border-t border-gray-200 bg-gradient-to-br from-gray-50 to-white p-4 sm:p-6"><div class="p-4"><p>Content for gold section</p></div></div></div>",
  "green": "<div class="border rounded-xl overflow-hidden shadow-sm transition-all duration-300 border-green-300 shadow-md " data-testid="visual-section-green-section"><div class="w-full px-4 sm:px-6 py-4 sm:py-5 bg-white transition-all duration-200 hover:bg-green-100"><div class="flex items-center justify-between"><div class="flex items-center space-x-3 sm:space-x-4 flex-1 min-w-0"><div class="relative p-2 sm:p-2.5 rounded-xl transition-all duration-200 bg-green-50 border-green-200 text-green-800 scale-110"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon" class="h-5 w-5 sm:h-6 sm:w-6 transition-transform duration-200"><path stroke-linecap="round" stroke-linejoin="round" d="M12 21a9.004 9.004 0 0 0 8.716-6.747M12 21a9.004 9.004 0 0 1-8.716-6.747M12 21c2.485 0 4.5-4.03 4.5-9S14.485 3 12 3m0 18c-2.485 0-4.5-4.03-4.5-9S9.515 3 12 3m0 0a8.997 8.997 0 0 1 7.843 4.582M12 3a8.997 8.997 0 0 0-7.843 4.582m15.686 0A11.953 11.953 0 0 1 12 10.5c-2.998 0-5.74-1.1-7.843-2.918m15.686 0A8.959 8.959 0 0 1 21 12c0 .778-.099 1.533-.284 2.253m0 0A17.919 17.919 0 0 1 12 16.5c-3.162 0-6.133-.815-8.716-2.247m0 0A9.015 9.015 0 0 1 3 12c0-1.605.42-3.113 1.157-4.418"></path></svg></div><div class="flex-1 min-w-0"><div class="flex items-center space-x-2 flex-wrap"><h3 class="text-base sm:text-lg font-semibold text-gray-900 truncate">Green Section</h3><span class="inline-flex items-center px-2 py-1 text-xs font-medium bg-gradient-to-r from-blue-100 to-blue-200 text-blue-800 rounded-full whitespace-nowrap">Test</span></div><p class="text-sm text-gray-600 mt-1 line-clamp-2 sm:line-clamp-1">A green colored section</p></div></div></div></div><div class="border-t border-gray-200 bg-gradient-to-br from-gray-50 to-white p-4 sm:p-6"><div class="p-4"><p>Content for green section</p></div></div></div>",
  "purple": "<div class="border rounded-xl overflow-hidden shadow-sm transition-all duration-300 border-purple-300 shadow-md " data-testid="visual-section-purple-section"><div class="w-full px-4 sm:px-6 py-4 sm:py-5 bg-white transition-all duration-200 hover:bg-purple-100"><div class="flex items-center justify-between"><div class="flex items-center space-x-3 sm:space-x-4 flex-1 min-w-0"><div class="relative p-2 sm:p-2.5 rounded-xl transition-all duration-200 bg-purple-50 border-purple-200 text-purple-800 scale-110"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon" class="h-5 w-5 sm:h-6 sm:w-6 transition-transform duration-200"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 21v-7.5a.75.75 0 0 1 .75-.75h3a.75.75 0 0 1 .75.75V21m-4.5 0H2.36m11.14 0H18m0 0h3.64m-1.39 0V9.349M3.75 21V9.349m0 0a3.001 3.001 0 0 0 3.75-.615A2.993 2.993 0 0 0 9.75 9.75c.896 0 1.7-.393 2.25-1.016a2.993 2.993 0 0 0 2.25 1.016c.896 0 1.7-.393 2.25-1.015a3.001 3.001 0 0 0 3.75.614m-16.5 0a3.004 3.004 0 0 1-.621-4.72l1.189-1.19A1.5 1.5 0 0 1 5.378 3h13.243a1.5 1.5 0 0 1 1.06.44l1.19 1.189a3 3 0 0 1-.621 4.72M6.75 18h3.75a.75.75 0 0 0 .75-.75V13.5a.75.75 0 0 0-.75-.75H6.75a.75.75 0 0 0-.75.75v3.75c0 .414.336.75.75.75Z"></path></svg></div><div class="flex-1 min-w-0"><div class="flex items-center space-x-2 flex-wrap"><h3 class="text-base sm:text-lg font-semibold text-gray-900 truncate">Purple Section</h3><span class="inline-flex items-center px-2 py-1 text-xs font-medium bg-gradient-to-r from-blue-100 to-blue-200 text-blue-800 rounded-full whitespace-nowrap">Test</span></div><p class="text-sm text-gray-600 mt-1 line-clamp-2 sm:line-clamp-1">A purple colored section</p></div></div></div></div><div class="border-t border-gray-200 bg-gradient-to-br from-gray-50 to-white p-4 sm:p-6"><div class="p-4"><p>Content for purple section</p></div></div></div>",
}
`;

exports[`Visual Regression Tests - Customization Components CustomizationSection Visual States renders collapsed state correctly: section-collapsed-blue 1`] = `
<div
  class="border rounded-xl overflow-hidden shadow-sm transition-all duration-300 border-gray-200 hover:border-gray-300 hover:shadow-sm "
  data-testid="visual-section-test-section"
>
  <div
    class="w-full px-4 sm:px-6 py-4 sm:py-5 bg-white transition-all duration-200 hover:bg-gray-50"
  >
    <div
      class="flex items-center justify-between"
    >
      <div
        class="flex items-center space-x-3 sm:space-x-4 flex-1 min-w-0"
      >
        <div
          class="relative p-2 sm:p-2.5 rounded-xl transition-all duration-200 bg-blue-50 border-blue-200 text-blue-800 "
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5 sm:h-6 sm:w-6 transition-transform duration-200"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center space-x-2 flex-wrap"
          >
            <h3
              class="text-base sm:text-lg font-semibold text-gray-900 truncate"
            >
              Test Section
            </h3>
          </div>
          <p
            class="text-sm text-gray-600 mt-1 line-clamp-2 sm:line-clamp-1"
          >
            This is a test section for visual regression testing
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests - Customization Components CustomizationSection Visual States renders expanded state correctly: section-expanded-blue 1`] = `
<div
  class="border rounded-xl overflow-hidden shadow-sm transition-all duration-300 border-blue-300 shadow-md "
  data-testid="visual-section-test-section"
>
  <div
    class="w-full px-4 sm:px-6 py-4 sm:py-5 bg-white transition-all duration-200 hover:bg-blue-100"
  >
    <div
      class="flex items-center justify-between"
    >
      <div
        class="flex items-center space-x-3 sm:space-x-4 flex-1 min-w-0"
      >
        <div
          class="relative p-2 sm:p-2.5 rounded-xl transition-all duration-200 bg-blue-50 border-blue-200 text-blue-800 scale-110"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5 sm:h-6 sm:w-6 transition-transform duration-200"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center space-x-2 flex-wrap"
          >
            <h3
              class="text-base sm:text-lg font-semibold text-gray-900 truncate"
            >
              Test Section
            </h3>
          </div>
          <p
            class="text-sm text-gray-600 mt-1 line-clamp-2 sm:line-clamp-1"
          >
            This is a test section for visual regression testing
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="border-t border-gray-200 bg-gradient-to-br from-gray-50 to-white p-4 sm:p-6"
  >
    <div
      class="p-4 bg-white rounded"
    >
      <h4
        class="font-medium"
      >
        Test Content
      </h4>
      <p>
        This is expanded content for visual testing.
      </p>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests - Customization Components CustomizationSection Visual States renders with badge and unsaved changes: section-complex-state 1`] = `
<div
  class="border rounded-xl overflow-hidden shadow-sm transition-all duration-300 border-purple-300 shadow-md ring-2 ring-orange-200 ring-opacity-50"
  data-testid="visual-section-complex-section"
>
  <div
    class="w-full px-4 sm:px-6 py-4 sm:py-5 bg-white transition-all duration-200 hover:bg-purple-100"
  >
    <div
      class="flex items-center justify-between"
    >
      <div
        class="flex items-center space-x-3 sm:space-x-4 flex-1 min-w-0"
      >
        <div
          class="relative p-2 sm:p-2.5 rounded-xl transition-all duration-200 bg-purple-50 border-purple-200 text-purple-800 scale-110"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5 sm:h-6 sm:w-6 transition-transform duration-200"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
          <div
            class="absolute -top-1 -right-1 w-3 h-3 bg-orange-400 rounded-full border-2 border-white animate-pulse"
          />
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center space-x-2 flex-wrap"
          >
            <h3
              class="text-base sm:text-lg font-semibold text-gray-900 truncate"
            >
              Complex Section
            </h3>
            <span
              class="inline-flex items-center px-2 py-1 text-xs font-medium bg-gradient-to-r from-blue-100 to-blue-200 text-blue-800 rounded-full whitespace-nowrap"
            >
              Enterprise
            </span>
            <span
              class="inline-flex items-center px-2 py-1 text-xs font-medium bg-orange-100 text-orange-800 rounded-full"
            >
              Unsaved
            </span>
          </div>
          <p
            class="text-sm text-gray-600 mt-1 line-clamp-2 sm:line-clamp-1"
          >
            Section with badge and unsaved changes
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="border-t border-gray-200 bg-gradient-to-br from-gray-50 to-white p-4 sm:p-6"
  >
    <div
      class="p-4 space-y-4"
    >
      <div
        class="bg-yellow-50 border border-yellow-200 rounded p-3"
      >
        <p
          class="text-yellow-800"
        >
          Warning: You have unsaved changes
        </p>
      </div>
      <div
        class="grid grid-cols-2 gap-4"
      >
        <div
          class="bg-white border rounded p-3"
        >
          <h5
            class="font-medium"
          >
            Setting 1
          </h5>
          <p
            class="text-sm text-gray-600"
          >
            Configuration option
          </p>
        </div>
        <div
          class="bg-white border rounded p-3"
        >
          <h5
            class="font-medium"
          >
            Setting 2
          </h5>
          <p
            class="text-sm text-gray-600"
          >
            Another option
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests - Customization Components CustomizationSection Visual States renders with badge correctly: section-with-badge 1`] = `
<div
  class="border rounded-xl overflow-hidden shadow-sm transition-all duration-300 border-gray-200 hover:border-gray-300 hover:shadow-sm "
  data-testid="visual-section-badge-section"
>
  <div
    class="w-full px-4 sm:px-6 py-4 sm:py-5 bg-white transition-all duration-200 hover:bg-gray-50"
  >
    <div
      class="flex items-center justify-between"
    >
      <div
        class="flex items-center space-x-3 sm:space-x-4 flex-1 min-w-0"
      >
        <div
          class="relative p-2 sm:p-2.5 rounded-xl transition-all duration-200 bg-blue-50 border-blue-200 text-blue-800 "
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5 sm:h-6 sm:w-6 transition-transform duration-200"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center space-x-2 flex-wrap"
          >
            <h3
              class="text-base sm:text-lg font-semibold text-gray-900 truncate"
            >
              Badge Section
            </h3>
            <span
              class="inline-flex items-center px-2 py-1 text-xs font-medium bg-gradient-to-r from-blue-100 to-blue-200 text-blue-800 rounded-full whitespace-nowrap"
            >
              Primary
            </span>
          </div>
          <p
            class="text-sm text-gray-600 mt-1 line-clamp-2 sm:line-clamp-1"
          >
            Section with badge
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests - Customization Components CustomizationSection Visual States renders with unsaved changes correctly: section-unsaved-changes 1`] = `
<div
  class="border rounded-xl overflow-hidden shadow-sm transition-all duration-300 border-blue-300 shadow-md ring-2 ring-orange-200 ring-opacity-50"
  data-testid="visual-section-unsaved-section"
>
  <div
    class="w-full px-4 sm:px-6 py-4 sm:py-5 bg-white transition-all duration-200 hover:bg-blue-100"
  >
    <div
      class="flex items-center justify-between"
    >
      <div
        class="flex items-center space-x-3 sm:space-x-4 flex-1 min-w-0"
      >
        <div
          class="relative p-2 sm:p-2.5 rounded-xl transition-all duration-200 bg-blue-50 border-blue-200 text-blue-800 scale-110"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5 sm:h-6 sm:w-6 transition-transform duration-200"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
          <div
            class="absolute -top-1 -right-1 w-3 h-3 bg-orange-400 rounded-full border-2 border-white animate-pulse"
          />
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center space-x-2 flex-wrap"
          >
            <h3
              class="text-base sm:text-lg font-semibold text-gray-900 truncate"
            >
              Unsaved Section
            </h3>
            <span
              class="inline-flex items-center px-2 py-1 text-xs font-medium bg-orange-100 text-orange-800 rounded-full"
            >
              Unsaved
            </span>
          </div>
          <p
            class="text-sm text-gray-600 mt-1 line-clamp-2 sm:line-clamp-1"
          >
            Section with unsaved changes
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="border-t border-gray-200 bg-gradient-to-br from-gray-50 to-white p-4 sm:p-6"
  >
    <div
      class="p-4"
    >
      <p>
        Content with unsaved changes
      </p>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests - Customization Components Error State Visual Tests renders error states correctly: error-warning-states 1`] = `
<div>
  <div
    class="space-y-4"
  >
    <div
      class="bg-red-50 border border-red-200 rounded-lg p-4"
    >
      <div
        class="flex"
      >
        <div
          class="flex-shrink-0"
        >
          <svg
            class="h-5 w-5 text-red-400"
            fill="currentColor"
            viewBox="0 0 20 20"
          >
            <path
              clip-rule="evenodd"
              d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="ml-3"
        >
          <h3
            class="text-sm font-medium text-red-800"
          >
            Save Failed
          </h3>
          <p
            class="mt-1 text-sm text-red-700"
          >
            Your changes could not be saved. Please try again.
          </p>
        </div>
      </div>
    </div>
    <div
      class="bg-yellow-50 border border-yellow-200 rounded-lg p-4"
    >
      <div
        class="flex"
      >
        <div
          class="flex-shrink-0"
        >
          <svg
            class="h-5 w-5 text-yellow-400"
            fill="currentColor"
            viewBox="0 0 20 20"
          >
            <path
              clip-rule="evenodd"
              d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="ml-3"
        >
          <h3
            class="text-sm font-medium text-yellow-800"
          >
            Validation Warning
          </h3>
          <p
            class="mt-1 text-sm text-yellow-700"
          >
            Some fields may need your attention.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests - Customization Components Full Page Visual States renders loading skeleton correctly: page-loading-skeleton 1`] = `
<div>
  <div
    class="min-h-screen bg-gradient-to-br from-gray-50 to-gray-100"
  >
    <div
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8"
    >
      <div
        class="mb-8"
      >
        <div
          class="h-8 bg-gray-200 rounded-lg w-1/3 mb-3 animate-pulse"
        />
        <div
          class="h-5 bg-gray-200 rounded-lg w-2/3 animate-pulse"
        />
      </div>
      <div
        class="space-y-6"
      >
        <div
          class="bg-white border border-gray-200 rounded-xl p-6 animate-pulse"
        >
          <div
            class="flex items-center space-x-4"
          >
            <div
              class="w-12 h-12 bg-gray-200 rounded-xl"
            />
            <div
              class="flex-1"
            >
              <div
                class="h-5 bg-gray-200 rounded w-1/4 mb-2"
              />
              <div
                class="h-4 bg-gray-200 rounded w-1/2"
              />
            </div>
          </div>
        </div>
        <div
          class="bg-white border border-gray-200 rounded-xl p-6 animate-pulse"
        >
          <div
            class="flex items-center space-x-4"
          >
            <div
              class="w-12 h-12 bg-gray-200 rounded-xl"
            />
            <div
              class="flex-1"
            >
              <div
                class="h-5 bg-gray-200 rounded w-1/4 mb-2"
              />
              <div
                class="h-4 bg-gray-200 rounded w-1/2"
              />
            </div>
          </div>
        </div>
        <div
          class="bg-white border border-gray-200 rounded-xl p-6 animate-pulse"
        >
          <div
            class="flex items-center space-x-4"
          >
            <div
              class="w-12 h-12 bg-gray-200 rounded-xl"
            />
            <div
              class="flex-1"
            >
              <div
                class="h-5 bg-gray-200 rounded w-1/4 mb-2"
              />
              <div
                class="h-4 bg-gray-200 rounded w-1/2"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests - Customization Components Success State Visual Tests renders success states correctly: success-info-states 1`] = `
<div>
  <div
    class="space-y-4"
  >
    <div
      class="bg-green-50 border border-green-200 rounded-lg p-4"
    >
      <div
        class="flex"
      >
        <div
          class="flex-shrink-0"
        >
          <svg
            class="h-5 w-5 text-green-400"
            fill="currentColor"
            viewBox="0 0 20 20"
          >
            <path
              clip-rule="evenodd"
              d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="ml-3"
        >
          <h3
            class="text-sm font-medium text-green-800"
          >
            Changes Saved
          </h3>
          <p
            class="mt-1 text-sm text-green-700"
          >
            Your customization settings have been saved successfully.
          </p>
        </div>
      </div>
    </div>
    <div
      class="bg-blue-50 border border-blue-200 rounded-lg p-4"
    >
      <div
        class="flex"
      >
        <div
          class="flex-shrink-0"
        >
          <svg
            class="h-5 w-5 text-blue-400"
            fill="currentColor"
            viewBox="0 0 20 20"
          >
            <path
              clip-rule="evenodd"
              d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="ml-3"
        >
          <h3
            class="text-sm font-medium text-blue-800"
          >
            Auto-save Enabled
          </h3>
          <p
            class="mt-1 text-sm text-blue-700"
          >
            Your changes are being saved automatically.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
